--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <html>
-    <title>"Welcome to Github learning"</title>
+    <title>"Welcome to Github learning"</title>\
+    <title>"this is second title</title>
 </html>
